--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
     "gulp-webp": "^3.0.0",
+    "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.1.0",
     "pump": "^3.0.0",
     "run-sequence": "^2.2.1",
